Importing "fof-user-bio" component from "https://raw.githubusercontent.com/rooaaar/lang-french-extended/master/locale/fof-user-bio.yml".

--- a/translations/fr/fof-user-bio.json
+++ b/translations/fr/fof-user-bio.json
@@ -2,16 +2,16 @@
     "fof-user-bio": {
         "admin": {
             "permission": {
-                "view": "",
-                "editOwn": "",
-                "editAny": ""
+                "view": "Voir la biographie",
+                "editOwn": "Modifier sa propre biographie",
+                "editAny": "Modifier n’importe quelle biographie"
             },
             "setting": {
-                "bioLimit": ""
+                "bioLimit": "Limite de caractères"
             }
         },
         "forum": {
-            "userbioPlaceholder": ""
+            "userbioPlaceholder": "Écrivez quelque chose à propos de vous"
         }
     }
 }
